# harbor-trainer

./: .gitmodules  README.md  check_rollouts.py  pyproject.toml  run.sh  run_training.sh  setup.sh
configs/: harbor_8b.toml
docs/: SKYRL_TX_MIGRATION.md
scripts/: cleanup_docker.sh  run_skyrl_tx.sh  start_skyrl_tx.sh  start_vllm.sh
src/: __init__.py  harbor_env.py  terminus2_trainer.py  tinker_llm.py  train.py
